deployment/kubernetes/gpu/deployment_s3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-serving
  template:
    metadata:
      labels:
        app: llm-serving
    spec:
      containers:
      - name: llm-serving
        image:  vllm/vllm-openai:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: "1"
        args:
        - --model
        - /root/.cache/huggingface/Phi-3-mini-4k-instruct
        - --gpu-memory-utilization
        - "0.8"
        - --dtype
        - half
        - --max-model-len
        - "8208"
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /root/.cache/huggingface
          name: minio-bucket


      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: minio-bucket
        emptyDir: {}
