deployment/kubernetes/gpu/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-serving
  labels:
    name: llm-serving
spec:
  rules:
  - host: llm-serving.lab.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: llm-serving
            port: 
              number: 8000
